2005-12-15  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_lastlog/pam_lastlog.c (last_login_read): Don't report an
	error if user logins the first time.

	* modules/pam_lastlog/README: New.

	* modules/pam_lastlog/Makefile.am: Add README to EXTRADIST.

2005-12-14  Thorsten Kukuk  <kukuk@suse.de>

	* modules/pam_deny/pam_deny.c: Fix comment.

	* doc/pam_appl.sgml: Fix typo.

	Reported by Russell Bateman <russ@windofkeltia.com>

2005-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 0.99.2.1

	* po/de.po: Remove new fuzzy entry

	* NEWS: Add 0.99.2.1 changes

	* configure.in: bump version number to 0.99.2.1

2005-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	Cleanup pam_syslog messages.

	* modules/pam_env/pam_env.c (_expand_arg): Fix compiler warning.
	* modules/pam_filter/pam_filter.c (set_filter): Append %m
	specifier to pam_syslog messages where appropriate.
	* modules/pam_group/pam_group.c (read_field): Likewise.
	* modules/pam_mkhomedir/pam_mkhomedir.c (make_remark): Remove.
	(create_homedir): Do not use make_remark() wrapper, call
	pam_info() directly.  Call pam_syslog() right after failed
	operation and append %m specifier to pam_syslog messages where
	appropriate.
	* modules/pam_rhosts/pam_rhosts_auth.c (pam_iruserok): Replace
	sequence of malloc(), strcpy() and strcat() calls with asprintf().
	Append %m specifier to pam_syslog messages where appropriate.
	* modules/pam_securetty/pam_securetty.c (securetty_perform_check):
	Append %m specifier to pam_syslog messages where appropriate.
	* modules/pam_shells/pam_shells.c (perform_check): Likewise.

2005-12-12  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_mail/pam_mail.c (report_mail): Fixed typo in string.
	* po/Linux-PAM.pot: Likewise.
	* po/de.po: Likewise.
	* po/es.po: Likewise.
	* po/fi.po: Likewise.
	* po/fr.po: Likewise.
	* po/hu.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/nb.po: Likewise.
	* po/pa.po: Likewise.
	* po/pl.po: Likewise.
	* po/pt.po: Likewise.