@@ -1,7 +1,7 @@
 Original authors and current maintainers of Linux-PAM:
 
-Andrew G. Morgan	<morgan@linux.kernel.org>
+Andrew G. Morgan	<morgan@kernel.org>
 Dmitry V. Levin		<ldv@altlinux.org>
-Thorsten Kukuk		<kukuk@suse.de>
+Thorsten Kukuk		<kukuk@thkukuk.de>
 Sebastien Tricaud	<toady@gscore.org>
 Tomas Mraz		<t8m@centrum.cz>
